{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 15,
  "lineage": "14f883ce-d802-90a6-efe0-631c18aa918f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "k3s-master-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0ea6840e886586c3e",
            "domain": "vpc",
            "id": "eipalloc-0f5c3c66b510a6f0d",
            "instance": "i-0404831ef4be891b1",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0459194d136de1054",
            "private_dns": "ip-10-0-48-253.us-east-2.compute.internal",
            "private_ip": "10.0.48.253",
            "public_dns": "ec2-18-189-238-49.us-east-2.compute.amazonaws.com",
            "public_ip": "18.189.238.49",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.k3s-master-node",
            "aws_key_pair.deployer",
            "aws_security_group.k3s-sg",
            "aws_subnet.k3s-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k3s-master-node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b500ef59d8335eee",
            "arn": "arn:aws:ec2:us-east-2:173829197379:instance/i-0404831ef4be891b1",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0404831ef4be891b1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "k3s-setup-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0459194d136de1054",
            "private_dns": "ip-10-0-48-253.us-east-2.compute.internal",
            "private_ip": "10.0.48.253",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0422eba0e8ed0f40c",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0fde8c80ef83b5d2e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e7fc078e1c7403a4",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fde8c80ef83b5d2e"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.k3s-sg",
            "aws_subnet.k3s-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "k3s-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:173829197379:internet-gateway/igw-0ab03fcb2e46e0b5b",
            "id": "igw-0ab03fcb2e46e0b5b",
            "owner_id": "173829197379",
            "vpc_id": "vpc-0f08aca9ddbb7a3bf"
          },
          "dependencies": [
            "aws_vpc.signalpath"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-signalpath",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:173829197379:route-table/rtb-06a485aab5d5d32de",
            "id": "rtb-06a485aab5d5d32de",
            "owner_id": "173829197379",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ab03fcb2e46e0b5b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f08aca9ddbb7a3bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.k3s-gateway",
            "aws_vpc.signalpath"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e6a1414d59db09b",
            "route_table_id": "rtb-06a485aab5d5d32de",
            "subnet_id": "subnet-0e7fc078e1c7403a4"
          },
          "dependencies": [
            "aws_subnet.k3s-subnet",
            "aws_vpc.signalpath",
            "aws_internet_gateway.k3s-gateway",
            "aws_route_table.route-table-signalpath"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k3s-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:173829197379:security-group/sg-0fde8c80ef83b5d2e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fde8c80ef83b5d2e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "k3s-ssh-sg",
            "name_prefix": "",
            "owner_id": "173829197379",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f08aca9ddbb7a3bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.signalpath"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "k3s-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:173829197379:subnet/subnet-0e7fc078e1c7403a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.32.0/19",
            "id": "subnet-0e7fc078e1c7403a4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "173829197379",
            "vpc_id": "vpc-0f08aca9ddbb7a3bf"
          },
          "dependencies": [
            "aws_vpc.signalpath"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "signalpath",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:173829197379:vpc/vpc-0f08aca9ddbb7a3bf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01e55bd2abe85e5fd",
            "default_route_table_id": "rtb-0c5933a126b80b959",
            "default_security_group_id": "sg-0c415b631a2de95c3",
            "dhcp_options_id": "dopt-020e8075c7a56f70d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f08aca9ddbb7a3bf",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c5933a126b80b959",
            "owner_id": "173829197379"
          }
        }
      ]
    }
  ]
}